kubs/canary_urlshortner.yml
apiVersion: v1
kind: Service
metadata:
  name: urlshortner-service-canary

spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: urlshortner
    track: canary

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortner-deployment-canary
  labels:
    app: urlshortner

spec:
  replicas: $CANARY_REPLICAS
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      app: urlshortner
      track: canary
  template:
    metadata:
      labels:
        app: urlshortner
        track: canary

    spec:
      containers:
        - name: urlshortner
          image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
