kubs/urlshort_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortner-service

spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: urlshortner
